Enhance user interface with progress bar and improved layout for user details

--- a/index.html
+++ b/index.html
@@ -17,13 +17,22 @@
         <div id="content-wrapper">
             <div id="user-card">
                 <img src="assets/images/Logo No background.png" alt="User Avatar" class="user-avatar">
-                <div id="user-details"></div>
-                <h2 class="user-name">MOMENTUM</h2>
-                <p>test1</p>
-                <p>test2</p>
+                <div id="user-details">
+                    <h1 id="user-name">USERNAME</h1>
+                    <div class="progress-container">
+                        <div class="progress-bar"></div>
+                    </div>
+                </div>
             </div>
             <div id="todo-list">
-                <h1>Welcome to MOMENTUM</h1>
+                <h1>PROGRESSION</h1>
+                <input type="text" id="todo-input" placeholder="ADD A NEW TASK" autocomplete="off">
+                <ol id="todo-items">
+                    <li class="todo-item">
+                        <span class="todo-text">Sample Task</span>
+                        <button class="delete-button">Delete</button>
+                    </li>
+                </ol>
             </div>
         </div>
     </div>
