Add user editing functionality and enhance UI for user details

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
             <div id="user-card">
                 <img src="assets/images/Logo No background.png" alt="User Avatar" class="user-avatar">
                 <div id="user-details">
-                    <h1 id="user-name">USERNAME</h1>
+                    <div class="user-edit-container">
+                        <h1 id="user-name">USERNAME</h1>
+                        <button id="edit-user-button"><img class="edit-icon" src="assets/icons/edit.png" alt="Edit User"></button>
+                    </div>
                     <div class="progress-container">
                         <div class="progress-bar"></div>
                     </div>
